--- a/pagina-proa/src/Global.css
+++ b/pagina-proa/src/Global.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -16,7 +14,14 @@
     background-color: #f9f9f9;
     color: #333;
   }
-  
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1100px;
+    margin: 0 auto;
+  }
   /* ======== NAVBAR ======== */
   nav {
     background-color: #00416a;
@@ -41,7 +46,39 @@
   nav a:hover {
     color: #ffd700;
   }
-  
+
+  .brand {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  .logo {
+  margin-right: 5px;
+  border-radius: 4px;
+  width: 30px;
+  height: auto;
+}
+.text {
+  vertical-align: middle;
+}
+.links {
+  display: flex;
+  gap: 15px;
+}
+.link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  transition: color 0.3s ease;
+}
+
+.link:hover {
+  color: #ffd700;
+}
   /* ======== HERO ======== */
   .hero {
     background: linear-gradient(to right, #00416a, #e4e5e6);
